# gjkh

data/: words_en.json
wewords/: CMakeLists.txt  README.md  appveyor.yml
wewords/data/: words_hsk1.json  words_hsk2.json  words_hsk3.json  words_hsk4.json  words_hsk5.json  words_hsk6.json  words_zh.json
wewords/include/: AppSettings.h  BrowseView.h  FlashcardView.h  MainWindow.h  SettingsDialog.h  StatsView.h  UserProgress.h  Word.h  WordCard.h  WordDatabase.h
wewords/resources/: resources.qrc  wewords.rc
wewords/src/: BrowseView.cpp  FlashcardView.cpp  MainWindow.cpp  SettingsDialog.cpp  StatsView.cpp  UserProgress.cpp  WordCard.cpp  WordDatabase.cpp  main.cpp
